--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "git-commit-msg-linter": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
