--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "git-commit-msg-linter": "^4.5.0",
+    "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-is": ">= 16.8.0",
     "react-icons": "^4.7.1",
+    "react-is": ">= 16.8.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
