--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-is": ">= 16.8.0",
+    "react-router-dom": "^6.8.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
