--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "@/*": ["./src/*"],
       "@global/*": ["./src/global/*"],
       "@types/*": ["./src/global/types/*"],
+      "@pages/*": ["./src/global/pages/*"],
       "@styles/*": ["./src/global/styles/*"],
     }
   },
