--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@types/*": ["./src/global/types/*"],
       "@pages/*": ["./src/global/pages/*"],
       "@styles/*": ["./src/global/styles/*"],
+      "@config/*": ["./src/global/config/*"],
     }
   },
   "include": ["src"],
