--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "git-commit-msg-linter": "^4.5.0",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
