--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.3.2",
+    "firebase": "^9.17.1",
     "git-commit-msg-linter": "^4.5.0",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
