feat: create first service for register new post

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@styles/*": ["./src/global/styles/*"],
       "@config/*": ["./src/global/config/*"],
       "@components/*": ["./src/global/components/*"],
+      "@services/*": ["./src/global/services/*"],
     }
   },
   "include": ["src"],
